feat: test env file

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,14 @@ management:
       show-details: always
 
 spring:
+  config.import: optional:file:.env[.properties]
+  #  security:
+  #    oauth2:
+  #      client:
+  #        registration:
+  #          github:
+  #            client-id: b84d261c041eaa27ea65
+  #            client-secret: ${GITHUB_CLIENT_SECRET}
   datasource:
     #    url: jdbc:h2:tcp://localhost:1521/ciazza
     url: jdbc:mysql://localhost:3306/ciazza_kotlin
