--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,5 @@
+frontend:
+  url: http://localhost:3000
 management:
   endpoints:
     enabled-by-default: false
@@ -9,13 +11,14 @@ management:
 
 spring:
   config.import: optional:file:.env[.properties]
-  #  security:
-  #    oauth2:
-  #      client:
-  #        registration:
-  #          github:
-  #            client-id: b84d261c041eaa27ea65
-  #            client-secret: ${GITHUB_CLIENT_SECRET}
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id: b84d261c041eaa27ea65
+            client-secret: ${GITHUB_CLIENT_SECRET}
+            redirect-uri: http://localhost:8080/login/oauth2/code/github
   datasource:
     #    url: jdbc:h2:tcp://localhost:1521/ciazza
     url: jdbc:mysql://localhost:3306/ciazza_kotlin
