--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,23 +2,12 @@ frontend:
   url: http://localhost:3000
 management:
   endpoints:
-    enabled-by-default: false
-  endpoint:
-    info.enabled: true
-    health:
-      enabled: true
-      show-details: always
+    web:
+      exposure:
+        include: "*"
 
 spring:
   config.import: optional:file:.env[.properties]
-  security:
-    oauth2:
-      client:
-        registration:
-          github:
-            client-id: b84d261c041eaa27ea65
-            client-secret: ${GITHUB_CLIENT_SECRET}
-            redirect-uri: http://localhost:8080/login/oauth2/code/github
   datasource:
     #    url: jdbc:h2:tcp://localhost:1521/ciazza
     url: jdbc:mysql://localhost:3306/ciazza_kotlin
